fixed main text position display flex, text align

--- a/css/index.scss
+++ b/css/index.scss
@@ -17,7 +17,13 @@ body {
     margin: 0;
     display: flex;
     align-items: center;
-    color: red;
+    color: rgb(222, 204, 204);
+    font-size: larger;
+
+    &--dfd {
+      color: red;
+      font-size: xx-large;
+    }
   }
 
   &__navigation {
@@ -57,5 +63,24 @@ a {
       width: 50%;
       object-fit: cover;
     }
+
+    &--text {
+      height: 100%;
+      width: 50%;
+      text-align: center;
+    }
+  }
+}
+
+.text {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  &__big {
+    font-size: 4rem;
+  }
+
+  &__small {
+    font-size: 1.5rem;
   }
 }
